<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search_title">Поиск</string>
    <string name="button_settings_title">Настройки</string>
    <string name="button_media_library_title">Медиатека</string>
    <string name="settings_title">Настройки</string>
    <string name="back_arrow_description">arrow to go back</string>
    <string name="black_theme_title">Темная тема</string>
    <string name="share_app_title">Поделиться приложением</string>
    <string name="share_app_description">share application icon</string>
    <string name="text_to_support_title">Написать в поддержку</string>
    <string name="text_to_support_description">text to support icon</string>
    <string name="user_agreement_title">Пользовательское соглашение</string>
    <string name="user_agreement_description">user agreement icon</string>
    <string name="messageToDevelopers">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="messageToDevelopersSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="link_to_course">https://practicum.yandex.ru/android-developer/</string>
    <string name="link_to_user_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="developer_email">timtut123@gmail.com</string>
    <string name="refresh">Обновить</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="error_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\n подключение к интернету</string>
    <string name="no_data">Ничего не нашлось</string>
    <string name="no_data_in_media_library">Ваша медиатека пуста</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_were_finded">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="init_song_time">00:00</string>
    <string name="media_library">Медиатека</string>
    <string name="create_new_playlist">Новый плейлист</string>
    <string name="your_medialibrary_is_empty">Ваша медиатека пуста</string>
    <string name="you_didnt_create_playlists">Вы не создали ни одного плейлиста</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist_title">Новый плейлист</string>
    <string name="playlist_title">Название*</string>
    <string name="playlist_about">Описание</string>
    <string name="create">Создать</string>
    <string name="wanna_to_finish_creating">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lose">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="done">Завершить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_already_added_to_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="save_playlist">Сохранить</string>
    <string name="editing">Редактирование</string>
    <string name="wanna_delete_playlist">Хотите удалить плейлист?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="to_delete">Удалить</string>
    <string name="wanna_delete_track_from_playlist">Вы уверены, что хотите удалить трек из плейлиста?</string>
</resources>