<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/horizontal_default_padding"
    android:paddingTop="@dimen/top_default_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/back_arrow_description"
            android:src="@drawable/arrow_back"
            android:foreground="?attr/selectableItemBackground"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/settings_title"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/defaultTextSize" />

    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:text="@string/black_theme_title"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_item_text_size" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingTop="21dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/share_app_title"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_item_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/share_app_description"
            android:src="@drawable/share" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingTop="21dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/text_to_support_title"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_item_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/text_to_support_description"
            android:src="@drawable/support" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingTop="21dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/user_agreement_title"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_item_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/user_agreement_description"
            android:src="@drawable/arrow_forward"
            android:layout_marginEnd="4dp"/>

    </FrameLayout>

</LinearLayout>