<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Main.Theme.PlaylistMaker"
    android:background="?attr/background"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/horizontal_default_padding"
    android:paddingTop="@dimen/top_default_padding"
    android:paddingBottom="@dimen/bottom_default_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/defaultTextSize"
        android:layout_marginBottom="@dimen/default_margin_from_top"
        android:fontFamily="@font/ys_display_medium"/>

    <Button
        android:id="@+id/button_search"
        android:text="@string/search_title"
        app:icon="@drawable/ic_search"
        style="@style/button_main_screen_style"/>

    <Button
        android:id="@+id/button_media_library"
        android:text="@string/button_media_library_title"
        app:icon="@drawable/ic_media_library"
        style="@style/button_main_screen_style"/>

    <Button
        android:id="@+id/button_settings"
        android:text="@string/button_settings_title"
        app:icon="@drawable/ic_settings"
        style="@style/button_main_screen_style"/>

</LinearLayout>