<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/horizontal_default_padding"
    android:paddingTop="@dimen/top_default_padding"
    android:theme="@style/Theme.PlaylistMaker"
    tools:context="ui.settings.fragments.SettingsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_from_top"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/settings_title"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/defaultTextSize" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_gravity="end"
        android:checked="false"
        android:text="@string/black_theme_title"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/settings_item_text_size"
        app:thumbTint="?attr/thumbTint"
        app:trackTint="?attr/trackTint"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/textViewShare"
        style="@style/item_settings_style"
        android:text="@string/share_app_title"
        app:drawableEndCompat="@drawable/share" />

    <TextView
        android:id="@+id/textViewTextToSupport"
        style="@style/item_settings_style"
        android:text="@string/text_to_support_title"
        app:drawableEndCompat="@drawable/support" />

    <TextView
        android:id="@+id/textViewUserAgreement"
        style="@style/item_settings_style"
        android:paddingStart="0dp"
        android:paddingEnd="4dp"
        android:text="@string/user_agreement_title"
        app:drawableEndCompat="@drawable/arrow_forward" />

</LinearLayout>