<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/horizontal_default_padding"
    android:theme="@style/Theme.PlaylistMaker"
    tools:context=".ui.playlist_details.fragment.EditPlaylistFragment">

    <ImageView
        android:id="@+id/arrow_back_create_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back_arrow_description"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create_playlist_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/new_playlist_title"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/defaultTextSize"
        app:layout_constraintStart_toEndOf="@id/arrow_back_create_playlist"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="32dp"
        android:scaleType="centerCrop"
        android:background="@drawable/empty_playlist_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_playlist_title"
        app:layout_constraintBottom_toTopOf="@id/et_playlist_name"
        tools:ignore="ContentDescription" />


    <EditText
        android:id="@+id/et_playlist_name"
        style="@style/edit_text_create_playlist"
        android:layout_marginBottom="16dp"
        android:hint="@string/playlist_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_playlist_about"
        tools:ignore="Autofill,RtlSymmetry" />

    <EditText
        android:id="@+id/et_playlist_about"
        style="@style/edit_text_create_playlist"
        android:hint="@string/playlist_about"
        android:layout_marginBottom="170dp"
        android:autofillHints="name"
        tools:ignore="Autofill,RtlSymmetry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_create_playlist"/>

    <Button
        android:id="@+id/btn_create_playlist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="16sp"
        android:background="@drawable/create_playslist_button_state"
        android:text="@string/create"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:enabled="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>