<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    android:orientation="vertical"
    android:paddingTop="@dimen/top_default_padding"
    android:theme="@style/Theme.PlaylistMaker"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/horizontal_default_padding">

        <ImageView
            android:id="@+id/arrow_back_from_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/back_arrow_description"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/search_title"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/defaultTextSize" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="@dimen/horizontal_default_padding"
        android:theme="@style/Theme.PlaylistMaker.EditText">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/edit_text_shape"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="4dp"
            android:drawableTint="?attr/colorPrimary"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search_title"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingStart="15.13dp"
            android:singleLine="true"
            android:textColor="@color/yp_black"
            android:textColorHint="?attr/colorPrimary"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            android:textSize="@dimen/search_activity_text_size"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:paddingEnd="14dp"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            tools:ignore="ContentDescription,RtlSymmetry" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Theme.PlaylistMaker">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            app:layoutManager="LinearLayoutManager" />

        <ImageView
            android:id="@+id/imgError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="110dp"
            android:src="@drawable/connection_error" />

        <TextView
            android:id="@+id/textViewErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="246dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_horizontal"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="19sp"
            tools:text="Проблемы со связью" />

        <Button
            android:id="@+id/btnRefresh"
            android:layout_width="104dp"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="358dp"
            android:backgroundTint="?attr/colorOnSecondary"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/refresh"
            android:textColor="?attr/colorAccent"
            android:textSize="12sp"
            app:cornerRadius="54dp" />


    </FrameLayout>

</LinearLayout>